# Pulp-Fiction

./: 18302424_FP.cpp  README.md
18302424_Assignment2_COS3711_2025_Version1/: 18302424_Assignment2_COS3711_2025_Version1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowshop.cpp  mainwindowshop.h  mainwindowshop.ui  resources.qrc
Passing_text_between_windows/: Passing_text_between_windows.pro  main.cpp  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui
QByteArray/: main.cpp
QCheckBox/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QComboBox/: CMakeLists.txt  dialog.ui
QDateTime/: main.cpp
QDialog_Assignment1_Question2_18302424/: CMakeLists.txt  bankingtransactions.cpp  bankingtransactions.h  bankingtransactions.ui  main.cpp
QDialog_Assignment1_Question3_18302424/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp
QDynamic_Casting/: CMakeLists.txt  car.cpp  car.h  feline.cpp  feline.h  main.cpp  racecar.cpp  racecar.h
QExplicitCasting/: CMakeLists.txt  main.cpp
QImplicitCasting/: CMakeLists.txt  main.cpp
QList/: CMakeLists.txt  main.cpp
QMainWindow/: CMakeLists.txt  main.cpp  mainwindow_universe.cpp  mainwindow_universe.h  mainwindow_universe.ui
QObject/: QObject.pro  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
QPassing_data_between_dialogs/: CMakeLists.txt  dialog1.cpp  dialog1.h  dialog1.ui  main.cpp  selections.cpp  selections.h  selections.ui
QShowing_other_dialogs/: CMakeLists.txt  dialog1.cpp  dialog1.h  dialog1.ui  (+3 more)
QStringList/: CMakeLists.txt  main.cpp
(+12 files in other folders)
